dns: check target of resolv.conf symlink by comparing file id

The kernel will now take care of resolving link targets and handling
multiple levels of symlinks; we are basically comparing the file's
st_dev and st_ino fields.

https://bugzilla.gnome.org/show_bug.cgi?id=779269